JPaxos and mPaxos code used in SRDS21 paper